--- a/SPS_FrontEnd/src/assets/base.css
+++ b/SPS_FrontEnd/src/assets/base.css
@@ -1,8 +1,8 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --vt-c-white: #f8f4e9;
+  --vt-c-white-soft: #f0e9d8;
+  --vt-c-white-mute: #e8e0cc;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
