--- a/SPS_FrontEnd/src/assets/main.css
+++ b/SPS_FrontEnd/src/assets/main.css
@@ -1,8 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 2200px;
+  margin: 0 120px;
   padding: 2rem;
   font-weight: normal;
 }
@@ -10,7 +10,7 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color:#6434EB;
   transition: 0.4s;
   padding: 3px;
 }
@@ -21,7 +21,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 2024px) {
   body {
     display: flex;
     place-items: center;
@@ -33,3 +33,13 @@ a,
     padding: 0 2rem;
   }
 }
+
+@media (min-width: 2200px) {
+  #app {
+    display: grid;
+    grid-template-columns: none;
+    padding: 0;
+  }
+}
+
+
